// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Import a registration should give me a CSV template when I request it 1`] = `
[
  "addressCity",
  "addressHouseNumber",
  "addressHouseNumberAddition",
  "addressPostalCode",
  "addressStreet",
  "fullName",
  "paymentAmountMultiplier",
  "phoneNumber",
  "preferredLanguage",
  "projectFspConfigurationName",
  "referenceId",
  "whatsappPhoneNumber",
]
`;

exports[`Import a registration should throw an error when a required fsp attribute is missing 1`] = `
[
  {
    "column": "whatsappPhoneNumber",
    "error": "Cannot update 'whatsappPhoneNumber' is required for the FSP: 'Intersolve-voucher-whatsapp'",
    "lineNumber": 1,
  },
]
`;

exports[`Import a registration should throw an error with a dropdown registration atribute set to null 1`] = `
[
  {
    "column": "house",
    "error": "Value 'null' is not in the allowed options: 'lannister, stark, greyjoy' for attribute 'house'",
    "lineNumber": 1,
    "value": null,
  },
]
`;

exports[`Import a registration should throw an error with a numeric registration atribute set to null 1`] = `
[
  {
    "column": "addressHouseNumber",
    "error": "Cannot update/set addressHouseNumber with a nullable value as it is required for the FSP: Intersolve-visa",
    "lineNumber": 1,
    "value": null,
  },
]
`;
